[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/norwester.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Levels/RoomUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "ResultLose"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.631373, 0.0470588, 0.0470588, 0.623529 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ResultLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "YOU LOSE" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ResultLabel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ResultLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_room"
} ]
}

[sub_resource type="Animation" id=3]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.423529, 0.909804, 0.466667, 0.623529 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ResultLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "YOU WIN", "YOU WIN" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ResultLabel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ResultLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_room"
} ]
}

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 1 )

[node name="RoomUI" type="CanvasLayer" groups=[
"roomUI",
]]
script = ExtResource( 2 )

[node name="ResultWrapper" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 2494.57, 330.811 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultLabel" type="Label" parent="ResultWrapper"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.525
anchor_top = 0.58
anchor_right = 0.525
anchor_bottom = 0.58
margin_left = -179.0
margin_top = -66.0001
margin_right = 59.9999
margin_bottom = 20.9999
rect_pivot_offset = Vector2( 115.858, 44.69 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "YOU WIN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultAnimation" type="AnimationPlayer" parent="ResultWrapper"]
anims/ResultLose = SubResource( 2 )
anims/ResultWin = SubResource( 3 )

[node name="ButtonQuitRoom" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -81.0498
margin_top = 2.66969
margin_right = -3.0498
margin_bottom = 104.67
custom_fonts/font = SubResource( 4 )
toggle_mode = true
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonQuitRoom" to="." method="_on_ButtonQuitRoom_pressed"]
